--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h1>Ulimate Frisbee Teams</h1>
 		<nav>
 			<a href="home.html">Home</a>
-			<a href="history.html" class = "active">Teams</a>
+			<a href="index.html" class = "active">Teams</a>
 			<a href="http://www.wfdf.org/history-stats/history-of-ultimate#:~:text=In%201968%20Joel%20Silver%20introduced,a%20Wham%2DO%20Master%20disc.">History</a>
 			<a href="http://www.usaultimate.org/index.html" target="_blank">USA Ultimate</a>
 		</nav>
